# ua-safe-summarization

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
configs/: prepare_data.yaml  prepare_data_grpo.yaml  train_grpo.yaml  train_sft.yaml
configs/axolotl/: sft.yaml
configs/data/: grpo.yaml  sft.yaml
configs/hydra/: default.yaml
docs/: eda_toxicity.md  gcp-batch-axolotl.md  mrouge.md  reproducibility.md
notebooks/: eda.ipynb  eda_toxicity.ipynb  model_selection.ipynb
scripts/data/: prepare-data.py  prepare-grpo.sh  prepare-sft.sh  run-all-splits.sh
scripts/gcp/: config.json  setup.sh  submit.sh
scripts/setup/: setup_vast.sh
scripts/train/: train_grpo.py  train_sft.py  train_sft.sh
scripts/validate/: val_utils.py  validate.sh  validate_grpo.py  validate_sft.py
src/safesum/: validation.py
src/safesum/metrics/: __init__.py  _text.py  mrouge.py  tokenizers.py
src/safesum/training/: __init__.py  callbacks.py  model_utils.py  rewards.py  wandb_utils.py
src/safesum/training/callbacks/: __init__.py  general.py  utils.py  vllm_callbacks.py  vllm_managers.py
src/safesum/utils/: __init__.py  data.py  text.py  tokenizers.py  vllm_engine.py
tests/: test_mrouge.py
