[project]
name = "safesum"
version = "0.1.0"
description = "Fine-tuning toolkit for safe summarization with built-in toxicity alignment"
requires-python = "==3.12.*"

dependencies = [
    "datasets>=2.14,<3.0",
    "huggingface-hub>=1.11.0",
    "hydra-core>=1.3",
    "tokenize-uk>=0.2.0",
    "torch>=2.9.1",
    "transformers>=5.5.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "litellm>=1.72.0",
    "matplotlib>=3.10.8",
    "pytest>=8.0",
    "rich>=13.0",
    "rouge-score>=0.1.2",
    "tqdm>=4.66",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "safesum"
module-root = "src"

[tool.uv]
keyring-provider = "subprocess"
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
]
extra-index-url = ["https://pypi.nvidia.com"]
